deployment/Mongodb-Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "mongo-db-service"
  labels:
    app: "mongo-db-service"
spec:
  ports:
  - name: mongodb
    port: 27017
  clusterIP: None
  selector:
    app: mongodb
