deployment/Mongodb-Deployment/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
  - from:
      - podSelector:
          matchLabels:
            role: api
